# ikproj

./: .gitignore  .travis.yml  LICENSE  README.md  docker-compose.yml
.github/workflows/: test.yml
ikapi/: Dockerfile  Makefile  README.md  ikapi.cabal  stack.yaml
ikapi/app/: Main.hs
ikapi/src/: Api.hs  Config.hs  Init.hs  Lib.hs  Logger.hs  Models.hs
ikapi/src/Api/: Login.hs  Mission.hs  Session.hs  Sockets.hs  User.hs
ikapi/src/Model/: Status.hs
ikapi/src/Models/: Database.hs  Status.hs
ikweb/: Dockerfile  Makefile  package.json
ikweb-elm/: package.json  webpack.config.js
ikweb-elm/src/: Main.elm  index.html  index.js
ikweb-hs/: Makefile  default.nix  ikproj.cabal  nixpkgs.nix  shell.nix  stack.yaml
ikweb-hs/client/: Main.hs  cabal.config  client.cabal  default.nix
ikweb-hs/common/: Common.hs  common.cabal  default.nix
ikweb-hs/nix/: default.nix  docker.nix
ikweb-hs/server/: Main.hs  default.nix  server.cabal  stack.yaml
ikweb-hs/server/app/: Main.hs
ikweb-hs/server/src/: Lib.hs
ikweb-hs/src/: Common.hs  client.hs  server.hs
ikweb/src/: App.js  App.test.tsx  App.tsx  Route.tsx
ikweb/src/api/: index.tsx  login.tsx  resolve.tsx  users.tsx
