name:                ikapi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ikapi#readme
license:             MIT
license-file:        LICENSE
author:              Santi Lertsumran
maintainer:          santi@inslash.com
copyright:           2020 Santi Lertsumran
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Init
                     , Lib
                     , Api
                     , Api.Login
                     , Api.User
                     , Api.Session
                     , Logger
                     , Config
                     , Models
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , transformers
                     , servant-server
                     , servant-auth
                     , servant-auth-server
                     , wai
                     , wai-extra
                     , wai-middleware-metrics
                     , warp
                     , time
                     , text
                     , fast-logger
                     , katip
                     , monad-logger
                     , monad-metrics
                     , mtl
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , ekg
                     , ekg-core
                     , microlens
                     , unordered-containers
                     , resource-pool
                     , safe
                     , foreign-store
                     , cryptonite
  default-language:    Haskell2010

executable ikapi-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ikapi
  default-language:    Haskell2010

test-suite ikapi-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ikapi
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ikapi
