name:               ikproj
version:            1.0
build-type:         Simple
cabal-version:      >=1.10
license:            PublicDomain

executable server
  if impl(ghcjs)
    buildable: False
  ghc-options:      -O2 -threaded -Wall
  main-is:          server.hs
  hs-source-dirs:   src
  other-modules:    Common
  default-language: Haskell2010
  build-depends:    aeson,
                    base,
                    binary,
                    http-types,
                    http-media,
                    lucid,
                    miso,
                    network-uri,
                    servant,
                    servant-client,
                    servant-server,
                    text,
                    wai,
                    wai-extra,
                    warp

executable client
  if !impl(ghcjs)
    buildable: False
  ghcjs-options:    -dedupe -O2 -Wall
  main-is:          client.hs
  hs-source-dirs:   src
  other-modules:    Common
  default-language: Haskell2010
  build-depends:    aeson,
                    base,
                    ghcjs-base,
                    http-types,
                    http-media,
                    miso,
                    network-uri,
                    servant,
                    servant-client

