name:               client
version:            0.1.0.0
build-type:         Simple
cabal-version:      >=1.10
license:            PublicDomain

executable client
  if !impl(ghcjs)
    buildable: False

  main-is:          Main.hs
  ghcjs-options:    -dedupe -O2 -Wall
  default-language: Haskell2010
  build-depends:    aeson,
                    base,
                    common,
                    ghcjs-base,
                    http-types,
                    http-media,
                    miso,
                    network-uri,
                    servant,
                    servant-client